[gd_scene load_steps=4 format=3 uid="uid://bq1a6g60hrfe5"]

[ext_resource type="Script" path="res://prog122a.gd" id="1_n260f"]

[sub_resource type="Theme" id="Theme_mdlgm"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_uimqk"]
default_font_size = 32

[node name="prog122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n260f")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 36.0
offset_right = 1095.0
offset_bottom = 527.0
theme = SubResource("Theme_mdlgm")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 549.0
offset_right = 229.0
offset_bottom = 623.0
theme = SubResource("Theme_uimqk")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 549.0
offset_right = 667.0
offset_bottom = 623.0
theme = SubResource("Theme_uimqk")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 549.0
offset_right = 1073.0
offset_bottom = 623.0
theme = SubResource("Theme_uimqk")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
